# rust-face-detect

./: .clippy.toml  .env.example  .gitignore  Cargo.toml  FRONTEND_DESIGN.md  IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  README.md  SYSTEM_ARCHITECTURE.md  run.sh  rustfmt.toml  setup.sh  test_build.rs
src/: api.rs  detection.rs  detector.rs  error.rs  lib.rs  main.rs  types.rs
src/api/: crop.rs  health.rs  mod.rs  upload.rs
src/detection/: detector.rs  mod.rs  models.rs
src/models/: api_response.rs  error.rs  mod.rs
src/utils/: image.rs
static/: index.html
static/css/: style.css
static/js/: main.js
tests/: api_test.rs  integration_test.rs
