[package]
name = "face-detect-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-multipart = "0.6"
actix-cors = "0.6"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.24"
imageproc = "0.23"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Face detection - menggunakan imageproc untuk processing sederhana
# opencv = "0.84" # Skip untuk sekarang, gunakan mock detection

# File system
tempfile = "3.0"

# Testing
[dev-dependencies]
actix-rt = "2.0"
actix-test = "0.1"