[package]
name = "face-detect-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance face detection web service built with Rust"
license = "MIT"
repository = "https://github.com/yourusername/face-detect-rust"
keywords = ["face-detection", "image-processing", "rust", "web-service"]
categories = ["web-programming", "multimedia::images"]

[dependencies]
# Web framework
actix-web = "4.4"
actix-multipart = "0.6"
actix-cors = "0.6"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.24"
imageproc = "0.23"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
snafu = "0.7"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
tempfile = "3.0"

[dev-dependencies]
actix-rt = "2.0"
actix-test = "0.1"
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
debug = true
opt-level = 0

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "warn"
cargo = "warn"

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unused = "deny"